[project]
name = "radioligand-binding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "logging>=0.4.9.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
]
